--- a/Source_Code/Sentiment-Analysis-Social-Media.ipynb
+++ b/Source_Code/Sentiment-Analysis-Social-Media.ipynb
@@ -15,7 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# testtokens = nltk.word_tokenize(str(dfcomment))\n",
+    "# testtokens[:15]\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "\n",
+    "testtokens = nltk.word_tokenize(str(dfcomment))\n",
+    "print(testtokens[:15])\n"
    ]
   },
   {
